Drop support for SBT 0.13.x